implement damagetype damage events.  Fixes #363